# rknpu2

./: README.md  onnx2rknn.py  rknn_server_proxy.md
Linux/librknn_api/include/: rknn_api.h
doc/: RK3588_NPU_SRAM_usage.md  RKNN_Dynamic_Shape_Usage.md
examples/RV1106_RV1103/rknn_mobilenet_demo/: CMakeLists.txt  README.md
examples/RV1106_RV1103/rknn_mobilenet_demo/src/: main.cc
examples/RV1106_RV1103/rknn_yolov5_demo/: CMakeLists.txt  README.md
examples/RV1106_RV1103/rknn_yolov5_demo/convert_rknn_demo/yolov5/: onnx2rknn.py
examples/RV1106_RV1103/rknn_yolov5_demo/include/: postprocess.h
examples/RV1106_RV1103/rknn_yolov5_demo/src/: main.cc  postprocess.cc
examples/librknn_api_android_demo/: README.md
examples/rknn_api_demo/: CMakeLists.txt  README.md  build-android.sh  build-linux_RK3562.sh
examples/rknn_api_demo/src/: rknn_create_mem_demo.cpp  rknn_create_mem_with_rga_demo.cpp  rknn_set_internal_mem_from_fd_demo.cpp  rknn_set_internal_mem_from_phy_demo.cpp  rknn_with_mmz_demo.cpp
examples/rknn_benchmark/: CMakeLists.txt  README.md
examples/rknn_benchmark/src/: rknn_benchmark.cpp
examples/rknn_common_test/: CMakeLists.txt  README.md  build-android_RK356X.sh
examples/rknn_common_test/src/: main.cc
examples/rknn_dynamic_shape_input_demo/: CMakeLists.txt  README.md
examples/rknn_dynamic_shape_input_demo/src/: rknn_dynshape_inference.cc  rknn_dynshape_inference_zero_copy.cc
examples/rknn_internal_mem_reuse_demo/: CMakeLists.txt  README.md
examples/rknn_internal_mem_reuse_demo/src/: rknn_internal_mem_reuse_demo.cc
examples/rknn_matmul_api_demo/: CMakeLists.txt  README.md  README_CN.md  build-android_RK3562.sh  build-linux_RK3566_RK3568.sh  build-linux_RK3588.sh
examples/rknn_matmul_api_demo/src/: rknn_matmul_api_demo.cpp  rknn_matmul_demo.cpp
examples/rknn_mobilenet_demo/: CMakeLists.txt  README.md  build-android.sh  build-android_RK356X.sh  build-android_RK3588.sh  build-linux.sh
examples/rknn_mobilenet_demo/src/: main.cc
examples/rknn_multiple_input_demo/: CMakeLists.txt  README.md  build-android_RK356X.sh  build-android_RK3588.sh
examples/rknn_multiple_input_demo/model/RK356X/: multiple_input_demo.rknn
examples/rknn_multiple_input_demo/model/RK3588/: multiple_input_demo.rknn
examples/rknn_multiple_input_demo/src/: main.cc
examples/rknn_ssd_demo/: CMakeLists.txt  README.md  build-android.sh  build-android_RK356X.sh  build-android_RK3588.sh  build-linux.sh  build-linux_RK356X.sh  build-linux_RK3588.sh
examples/rknn_ssd_demo/model/: box_priors.txt
examples/rknn_ssd_demo/src/: main.cc  ssd.cc  ssd.h
examples/rknn_yolov5_android_apk_demo/: README.md
examples/rknn_yolov5_android_apk_demo/app/: CMakeLists.txt  build.gradle
examples/rknn_yolov5_android_apk_demo/app/src/main/: AndroidManifest.xml
examples/rknn_yolov5_android_apk_demo/app/src/main/cpp/: native-lib.cc  post_process.cc  rknn_api.h  yolo_image.cc  yolo_image.h
examples/rknn_yolov5_android_apk_demo/app/src/main/cpp/rga/: drmrga.h  im2d.cpp  im2d.h  im2d.hpp  im2d_common.cpp  im2d_common.h  im2d_hardware.h  im2d_type.h  im2d_version.h  platform_gralloc4.h
examples/rknn_yolov5_android_apk_demo/app/src/main/java/com/rockchip/gpadc/demo/: CameraPreviewActivity.java  InferenceResult.java  MainActivity.java
examples/rknn_yolov5_android_apk_demo/app/src/main/java/com/rockchip/gpadc/demo/rga/: HALDefine.java  RGA.java
examples/rknn_yolov5_android_apk_demo/app/src/main/res/values/: strings.xml
examples/rknn_yolov5_android_apk_demo/gradle/wrapper/: gradle-wrapper.properties
examples/rknn_yolov5_demo/: CMakeLists.txt  README.md  README_CN.md  build-android_RK356X.sh  build-android_RK3588.sh  build-linux_RK3588.sh
examples/rknn_yolov5_demo/convert_rknn_demo/yolov5/: README.md  onnx2rknn.py
examples/rknn_yolov5_demo/include/: postprocess.h
examples/rknn_yolov5_demo/model/: CMakeListsBackUp.txt
examples/rknn_yolov5_demo/src/: main.cc  main_camera.cc  main_video.cc  postprocess.cc
examples/rknn_yolov5_demo/utils/: mpp_decoder.cpp  mpp_decoder.h  mpp_encoder.cpp
runtime/: Android.bp  Android.go
runtime/RK356X/Android/librknn_api/include/: rknn_api.h  rknn_matmul_api.h
runtime/RK356X/Android/rknn_server/arm/: rknn_server
runtime/RK356X/Android/rknn_server/arm64/: rknn_server
runtime/RK3588/Android/librknn_api/include/: rknn_api.h
runtime/RK3588/Android/rknn_server/arm/: rknn_server
runtime/RK3588/Android/rknn_server/arm64/: rknn_server
runtime/RK3588/Linux/librknn_api/include/: rknn_api.h  rknn_matmul_api.h
runtime/RV1106/Linux/librknn_api/include/: rknn_api.h
